# medflow-v3-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compress_project.py  gym_env.py  inference.py  openenv.yaml  pyproject.toml  requirements-ml.txt  requirements.txt  tasks_verify.json  validate_final.txt  validate_output.txt  validate_result.txt
.github/workflows/: ci.yml
scripts/: validate-graders.sh  validate-submission.sh
server/: app.py
src/: __init__.py  api.py  baseline_agent.py  client.py  data_generator.py  environment.py  judge.py  main.py  mcp_server.py  models.py  ner_agent.py  persistence.py  record_processors.py  ui.py  utils.py
src/tasks/: common.py  task1_hygiene.py  task2_redaction.py  task3_anonymization.py  task4_knowledge.py  task5_reasoning.py
tests/: test_api.py  test_api_validation.py  test_baseline_safe_mode.py  test_client.py  test_environment.py  test_fhir_export.py  test_inference.py  test_integration.py  test_mcp_server.py  test_ner_agent.py  test_persistence.py  test_property_based.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  test_utils_record_processors.py
