[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-openenv"
version = "3.0.0"
description = "Synthetic healthcare OpenEnv for medical record cleaning and PHI redaction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "faker>=24.0.0",
    "openenv>=0.1.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.14.0",
    "gymnasium>=0.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]
llm = ["openai>=1.14.0"]
ui = ["gradio>=4.0.0"]
ml = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "evaluate>=0.4.0",
    "bert-score>=0.3.13",
    "sentence-transformers>=2.7.0",
]

[project.scripts]
server = "src.main:main"
